[tool.poetry]
name = "gunbroker-sniper"
version = "0.1.0"
description = ""
authors = ["anoduck <11767-anoduck@users.noreply.gitgud.io>"]

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "^2.0.0"
requests = "^2.27.1"
lxml = "^4.7.1"
prompt-toolkit = "^3.0.28"
selenium = "^4.1.0"
pylint = "^2.12.2"
cfscrape = "^2.1.1"
furl = "^2.1.3"
retrying = "^1.3.3"
captcha-harvester = "^2.2.0"
numpy = "^1.22.4"
scipy = { version = "^1.8.1", python = ">=3.9,<3.11" }
proxy-randomizer = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
