[tool.poetry]
name = "gunbroker-sniper"
version = "0.1.3"
description = "A Sniper for gunbroker, for all your needs."
authors = ["anoduck <11767-anoduck@users.noreply.gitgud.io>"]

[tool.poetry.dependencies]
python = "^3.10"
argcomplete = "^2.0.0"
requests = "^2.28.1"
lxml = "^4.7.1"
prompt-toolkit = "^3.0.30"
selenium = "^4.1.0"
furl = "^2.1.3"
retrying = "^1.3.3"
# numpy = "^1.22.4"
# scipy = { version = "^1.8.1", python = ">=3.9,<3.11" }
tomlkit = "^0.11.6"
art = "^5.8"
requests-html = "^0.10.0"
scheduler = "^0.8.2"


[tool.poetry.dev-dependencies]
pylint = "2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
